--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Kommentar av Erlend: En mulighet er å bruke en negativ gitignore fil ved å eksludere alt først med stjerne (*),
+# også legge til med utropstegn (!).
+# Et annet poeng er å eksludere alt som genereres med kommandoer, som npm install.
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
